--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,20 @@
 # npm
 node_modules
 package-lock.json
+
+# Logs
+logs
 *.log
 *.gz
 
 # Coveralls
 .nyc_output
 coverage
-
+npm-debug.log
 # Benchmarking
 benchmarks/graphs
 
 # ignore additional files using core.excludesFile
 # https://git-scm.com/docs/gitignore
+
+config/
